--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API para sistema de abarrotería",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch data/db.json --port $PORT --host 0.0.0.0"
+    "start": "json-server --watch data/db.json --port ${PORT:-3000} --host 0.0.0.0 --no-cors"
   },
   "dependencies": {
     "json-server": "^0.17.4"
