--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "abarroteria-api",
   "version": "1.0.0",
-  "description": "API para sistema de abarrotería",
+  "description": "JSON Server para Abarrotería Jardines del Edén",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "json-server --watch data/db.json --port 3000"
+    "dev": "json-server --watch src/data/db.json --port 3000"
   },
   "dependencies": {
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "cors": "^2.8.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.x"
   }
 }
